# tap-spreadsheets-anywhere

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  README.md  pyproject.toml  sample_config.json
.github/workflows/: build.yml
tap_spreadsheets_anywhere/: configuration.py  csv_handler.py  excel_handler.py  file_utils.py  format_handler.py  json_handler.py  json_object_handler.py  jsonl_handler.py
tap_spreadsheets_anywhere/test/: one-row-sample-jsonl.json  one-row-sample.json  sample.json  sample.jsonl  sample_with_bad_newlines.csv  test_config.py
