[tool.poetry]
name = "tap-spreadsheets-anywhere"
version = "0.2.0"
description = "Singer.io tap for extracting spreadsheet data from cloud storage"
readme = "README.md"
authors = ["Eric Simmerman"]
keywords = [
    "ELT",
]
license = "AGPL-3.0"
packages = [
    { include = "tap_spreadsheets_anywhere" },
]

[tool.poetry.dependencies]
python = ">=3.7,<3.13"
singer-python = "^5.0.12"
smart-open = {extras = ["all"], version = "^7.0.4"}
voluptuous = "^0.10.5"
boto3 = "^1.15.5"
google-cloud-storage = "^2.7.0"
protobuf = "^4.21.12"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
paramiko = "^3.2.0"
azure-storage-blob = "^12.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-spreadsheets-anywhere = "tap_spreadsheets_anywhere:main"

[tool.yamlfix]
comments_min_spaces_from_content = 2
comments_require_starting_space = true
explicit_start = false
sequence_style = 'block_style'
indent_mapping = 2
indent_offset = 2
indent_sequence = 4
line_length = 180
quote_basic_values = false
quote_keys_and_basic_values = false

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "RUF",
    "I001",
]
exclude = [
    ".meltano",
    ".secrets",
    "output",
]

[tool.pytest.ini_options]
# `-rxXs` means show extra info on xfailed, xpassed, and skipped tests
# see https://docs.pytest.org/en/7.1.x/how-to/skipping.html
addopts = [
    "-rxXs",
    "-v",
    "--capture=no", # uncomment to allow logger output during tests
]
